--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -73,6 +73,8 @@
 
         <TextView
             android:text="Descricao"
+            android:maxLines = "5"
+            android:scrollbars = "vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
