--- a/app/src/main/res/layout/activity_editar_aula.xml
+++ b/app/src/main/res/layout/activity_editar_aula.xml
@@ -51,7 +51,9 @@
             android:layout_below="@+id/EditTextNome"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:maxLines="2"
+            android:scrollbars="vertical"/>
 
         <EditText
             android:layout_width="wrap_content"
@@ -89,19 +91,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/TextViewPreco"
-            android:hint="Preço por hora/aula"
-            android:layout_marginBottom="27dp"
-            android:layout_above="@+id/button5"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textSize="20sp" />
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -124,6 +113,19 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/TextViewPreco"
+            android:hint="Preço por hora/aula"
+            android:layout_marginBottom="51dp"
+            android:textSize="20sp"
+            android:layout_above="@+id/button5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 </ScrollView>
