--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -49,7 +49,9 @@
             android:id="@+id/editTextDescricao"
             android:layout_below="@+id/EditTextNome"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:maxLines="4"
+            android:scrollbars="vertical"/>
 
         <TextView
             android:text="Editar Perfil"
@@ -94,6 +96,7 @@
             android:textColor="@android:color/background_light"
             android:onClick="populateListView"
             android:layout_alignTop="@+id/editTextTag"
+            android:layout_toRightOf="@+id/editTextTag"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="28dp"
@@ -103,10 +106,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/ListViewTags"
-            android:layout_below="@+id/ButtonAddTag"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_above="@+id/button3" />
+            android:layout_above="@+id/button3"
+            android:layout_below="@+id/ButtonAddTag" />
 
     </RelativeLayout>
 </ScrollView>
