--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -92,17 +92,6 @@
             android:layout_alignStart="@+id/textViewAvaliadores" />
 
         <TextView
-            android:text="Biografia:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:layout_marginBottom="36dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_above="@+id/textViewBiografia"
-            />
-
-        <TextView
             android:text="@string/horas_de_aulas_dadas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -127,11 +116,21 @@
             android:text=" Biografia do perfil"
             android:id="@+id/textViewBiografia"
             android:textSize="15sp"
-            android:maxLines = "5"
+            android:maxLines = "3"
             android:scrollbars = "vertical"
             android:layout_height="wrap_content"
             android:layout_width="250dp"
             android:layout_alignTop="@+id/floatingActionButton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Biografia:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            android:layout_marginBottom="20dp"
+            android:layout_above="@+id/textViewBiografia"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -144,10 +143,10 @@
             app:srcCompat="@android:drawable/ic_menu_edit"
             android:id="@+id/floatingActionButton"
             app:backgroundTint="#7bc8f3"
-            android:layout_marginBottom="38dp"
+            android:layout_marginBottom="37dp"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/textViewAvaliadores"
-            android:layout_toEndOf="@+id/textViewAvaliadores" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
     </ScrollView>
