--- a/app/src/main/res/layout/activity_perfil_alheio.xml
+++ b/app/src/main/res/layout/activity_perfil_alheio.xml
@@ -111,7 +111,9 @@
                 android:textSize="15sp"
                 android:layout_alignTop="@+id/textView8"
                 android:layout_alignLeft="@+id/textView8"
-                android:layout_alignStart="@+id/textView8" />
+                android:layout_alignStart="@+id/textView8"
+                android:maxLines="3"
+                android:scrollbars="vertical"/>
 
             <ListView
                 android:layout_width="match_parent"
