--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -7,6 +7,7 @@
     android:fillViewport="true">
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_interesses"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,18 +28,6 @@
             android:textSize="30sp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/botaoMostrarAlunos"
-            android:onClick="mostrarAlunos"
-            android:backgroundTint="#7bc8f3"
-            android:text="Mostrar alunos desta aula"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
         <TextView
             android:text="Preço"
@@ -97,34 +86,6 @@
             android:maxLines="3"
             android:scrollbars="vertical"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:id="@+id/floatingActionButton7"
-            android:backgroundTint="#7bc8f3"
-            android:onClick="confirmarAula"
-            android:text="Confirmar horas"
-            android:layout_above="@+id/botaoMostrarAlunos"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:fabSize="mini"
-            app:srcCompat="@android:drawable/ic_menu_edit"
-            android:id="@+id/floatingActionButton8"
-            android:tint="@android:color/background_light"
-            android:onClick="editarAula"
-            app:backgroundTint="#7bc8f3"
-            android:layout_marginRight="13dp"
-            android:layout_marginEnd="13dp"
-            android:layout_below="@+id/textViewPreço"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
         <TextView
             android:text="Horas de aula fornecidas"
             android:layout_width="wrap_content"
@@ -177,10 +138,99 @@
             android:id="@+id/ListViewTags"
             android:layout_below="@+id/textViewTags"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/floatingActionButton7"
-            android:layout_toStartOf="@+id/floatingActionButton7"
-            android:layout_above="@+id/botaoMostrarAlunos" />
+            android:layout_alignParentStart="true"/>
+
+        <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            fab:menu_fab_size="normal"
+            fab:menu_showShadow="true"
+            fab:menu_shadowColor="#66000000"
+            fab:menu_shadowRadius="4dp"
+            fab:menu_shadowXOffset="1dp"
+            fab:menu_shadowYOffset="3dp"
+            fab:menu_colorNormal="#DA4336"
+            fab:menu_colorPressed="#E75043"
+            fab:menu_colorRipple="#99FFFFFF"
+            fab:menu_animationDelayPerItem="50"
+            fab:menu_icon="@drawable/fab_add"
+            fab:menu_buttonSpacing="0dp"
+            fab:menu_labels_margin="0dp"
+            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+            fab:menu_labels_paddingTop="4dp"
+            fab:menu_labels_paddingRight="8dp"
+            fab:menu_labels_paddingBottom="4dp"
+            fab:menu_labels_paddingLeft="8dp"
+            fab:menu_labels_padding="8dp"
+            fab:menu_labels_textColor="#FFFFFF"
+            fab:menu_labels_textSize="14sp"
+            fab:menu_labels_cornerRadius="3dp"
+            fab:menu_labels_colorNormal="#333333"
+            fab:menu_labels_colorPressed="#444444"
+            fab:menu_labels_colorRipple="#66FFFFFF"
+            fab:menu_labels_showShadow="true"
+            fab:menu_labels_singleLine="false"
+            fab:menu_labels_ellipsize="none"
+            fab:menu_labels_maxLines="-1"
+            fab:menu_labels_position="left"
+            fab:menu_openDirection="up"
+            fab:menu_backgroundColor="@android:color/transparent"
+            fab:menu_fab_label="Fechar">
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/fabAlunos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@android:drawable/ic_menu_add"
+                android:onClick="mostrarAlunos"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Mostrar alunos da aula"/>
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/fabEditar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@android:drawable/ic_menu_add"
+                android:onClick="editarAula"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Editar Aula"/>
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/fabConfirmar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@android:drawable/ic_menu_add"
+                android:onClick="confirmarAula"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Confirmar Aula"/>
+
+        </com.github.clans.fab.FloatingActionMenu>
 
     </RelativeLayout>
 </ScrollView>
