--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -20,16 +20,6 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <TextView
-            android:text="Teste Aula"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/textViewNome"
-            android:textSize="30sp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
             android:text="Preço"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +37,7 @@
             android:id="@+id/textViewNomeDaAula"
             android:textSize="20sp"
 
-            android:layout_below="@+id/textView8"
+            android:layout_below="@+id/textViewPrecoAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="12dp"
@@ -57,17 +47,17 @@
             android:text="Preço"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView8"
+            android:id="@+id/textViewPrecoAula"
             android:textSize="20sp"
             android:layout_below="@+id/textViewPreço"
-            android:layout_alignLeft="@+id/textView100"
-            android:layout_alignStart="@+id/textView100" />
+            android:layout_alignLeft="@+id/textViewNomeAula"
+            android:layout_alignStart="@+id/textViewNomeAula" />
 
         <TextView
             android:text="Nome da aula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView100"
+            android:id="@+id/textViewNomeAula"
             android:textSize="20sp"
 
             android:layout_below="@+id/textViewNomeDaAula"
@@ -78,9 +68,9 @@
             android:text="Descrições da aula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView102"
+            android:id="@+id/textViewDescricaoAula"
             android:textSize="20sp"
-            android:layout_below="@+id/textViewDescricao"
+            android:layout_below="@+id/textViewDescricaoDaAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:maxLines="3"
@@ -93,7 +83,7 @@
             android:id="@+id/textViewHoras"
             android:textSize="20sp"
             android:textStyle="normal|bold"
-            android:layout_alignBottom="@+id/textView101"
+            android:layout_alignBottom="@+id/textViewHorasFornecidas"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="20dp" />
@@ -102,10 +92,10 @@
             android:text="Descrições da aula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewDescricao"
+            android:id="@+id/textViewDescricaoDaAula"
             android:textSize="20sp"
             android:textStyle="normal|bold"
-            android:layout_below="@+id/textView100"
+            android:layout_below="@+id/textViewNomeAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -113,9 +103,9 @@
             android:text="Horas de aula fornecidas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView101"
+            android:id="@+id/textViewHorasFornecidas"
             android:textSize="20sp"
-            android:layout_below="@+id/textView102"
+            android:layout_below="@+id/textViewDescricaoAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="73dp" />
