--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ScrollView01"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,15 +44,18 @@
             android:layout_alignParentStart="true" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="149dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:hint="Digite aqui a sua bio"
             android:id="@+id/editTextDescricao"
             android:layout_below="@+id/EditTextNome"
+            android:layout_above="@+id/ButtonAddTag"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:maxLines="4"
-            android:scrollbars="vertical"/>
+            android:maxLines="6"
+            android:scrollbars="vertical"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <TextView
             android:text="Editar Perfil"
@@ -71,11 +75,11 @@
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
             android:onClick="confirmar"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignBottom="@+id/ListViewTags"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <AutoCompleteTextView
             android:layout_width="wrap_content"
@@ -85,7 +89,15 @@
             android:hint="Tag"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ListViewTags"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/ButtonAddTag" />
 
         <Button
             android:text="Add"
@@ -97,19 +109,7 @@
             android:onClick="populateListView"
             android:layout_alignTop="@+id/editTextTag"
             android:layout_toRightOf="@+id/editTextTag"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="28dp"
-            android:layout_marginEnd="28dp" />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ListViewTags"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_above="@+id/button3"
-            android:layout_below="@+id/ButtonAddTag" />
+            android:layout_toEndOf="@+id/editTextTag" />
 
     </RelativeLayout>
 </ScrollView>
