--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -7,6 +7,7 @@
     android:fillViewport="true">
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_interesses"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,22 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewRate"
+            android:layout_below="@+id/toolbar"
             android:layout_alignBaseline="@+id/textViewAvaliadores"
-            android:layout_alignBottom="@+id/textViewAvaliadores"
-            android:layout_alignRight="@+id/floatingActionButton4"
-            android:layout_alignEnd="@+id/floatingActionButton4" />
+            android:layout_alignBottom="@+id/textViewAvaliadores"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:fabSize="normal"
-            app:srcCompat="@android:drawable/sym_action_chat"
-            android:id="@+id/floatingActionButton4"
-            app:backgroundTint="#7bc8f3"
-            android:layout_alignTop="@+id/button4"
-            android:layout_alignRight="@+id/ratingBar2"
-            android:layout_alignEnd="@+id/ratingBar2" />
 
         <RatingBar
             android:layout_width="wrap_content"
@@ -67,7 +56,6 @@
             android:layout_marginBottom="25dp"
             android:layout_marginLeft="25dp"
             android:layout_marginStart="25dp"
-            android:layout_above="@+id/button4"
             android:layout_alignLeft="@+id/ratingBar2"
             android:layout_alignStart="@+id/ratingBar2" />
 
@@ -84,19 +72,81 @@
             android:layout_alignEnd="@+id/textViewAvaliadores"
             android:layout_below="@+id/toolbar" />
 
-        <Button
-            android:text="Confirmar"
+        <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button4"
-            android:background="#7bc8f3"
-            android:textColor="@android:color/background_light"
-            android:layout_marginBottom="72dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/textViewAvaliadores"
-            android:layout_alignStart="@+id/textViewAvaliadores"
-            android:visibility="invisible"
-            android:onClick="confirmar"/>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            fab:menu_fab_size="normal"
+            fab:menu_showShadow="true"
+            fab:menu_shadowColor="#66000000"
+            fab:menu_shadowRadius="4dp"
+            fab:menu_shadowXOffset="1dp"
+            fab:menu_shadowYOffset="3dp"
+            fab:menu_colorNormal="#DA4336"
+            fab:menu_colorPressed="#E75043"
+            fab:menu_colorRipple="#99FFFFFF"
+            fab:menu_animationDelayPerItem="50"
+            fab:menu_icon="@drawable/fab_add"
+            fab:menu_buttonSpacing="0dp"
+            fab:menu_labels_margin="0dp"
+            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+            fab:menu_labels_paddingTop="4dp"
+            fab:menu_labels_paddingRight="8dp"
+            fab:menu_labels_paddingBottom="4dp"
+            fab:menu_labels_paddingLeft="8dp"
+            fab:menu_labels_padding="8dp"
+            fab:menu_labels_textColor="#FFFFFF"
+            fab:menu_labels_textSize="14sp"
+            fab:menu_labels_cornerRadius="3dp"
+            fab:menu_labels_colorNormal="#333333"
+            fab:menu_labels_colorPressed="#444444"
+            fab:menu_labels_colorRipple="#66FFFFFF"
+            fab:menu_labels_showShadow="true"
+            fab:menu_labels_singleLine="false"
+            fab:menu_labels_ellipsize="none"
+            fab:menu_labels_maxLines="-1"
+            fab:menu_labels_position="left"
+            fab:menu_openDirection="up"
+            fab:menu_backgroundColor="@android:color/transparent"
+            fab:menu_fab_label="Fechar">
+
+            <com.github.clans.fab.FloatingActionButton
+                android:text="Confirmar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button4"
+                android:background="#7bc8f3"
+                android:textColor="@android:color/background_light"
+                android:layout_marginBottom="72dp"
+                android:onClick="confirmar"
+                android:src="@android:drawable/ic_menu_add"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Confirmar horas"/>
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@android:drawable/ic_menu_add"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Chat com Professor"/>
+
+        </com.github.clans.fab.FloatingActionMenu>
 
         <TextView
             android:text="Horas"
