--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -184,7 +184,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:src="@android:drawable/ic_menu_add"
-                android:onClick="mostrarAlunos"
+                android:onClick="chamarAlunosCadastrados"
                 fab:fab_colorNormal="@color/colorPrimary"
                 fab:fab_colorPressed="@color/colorPrimaryDark"
                 fab:fab_colorRipple="@color/colorAccent"
@@ -199,7 +199,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:src="@android:drawable/ic_menu_add"
-                android:onClick="editarAula"
+                android:onClick="chamarEditarAula"
                 fab:fab_colorNormal="@color/colorPrimary"
                 fab:fab_colorPressed="@color/colorPrimaryDark"
                 fab:fab_colorRipple="@color/colorAccent"
