--- a/app/src/main/res/layout/activity_comprar_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_comprar_aula_aluno.xml
@@ -66,7 +66,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView20"
-            android:layout_above="@+id/textView5"
             android:layout_alignBaseline="@+id/TextViewTotalDaCompra"
             android:layout_alignBottom="@+id/TextViewTotalDaCompra"
             android:layout_alignParentLeft="true"
@@ -212,7 +211,8 @@
             android:layout_alignBaseline="@+id/TextViewTotalDeHoras"
             android:layout_alignBottom="@+id/TextViewTotalDeHoras"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView20"/>
 
     </RelativeLayout>
 </ScrollView>
