--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -72,7 +72,8 @@
             fab:menu_labels_position="left"
             fab:menu_openDirection="up"
             fab:menu_backgroundColor="@android:color/transparent"
-            fab:menu_fab_label="Fechar">
+            fab:menu_fab_label="Fechar"
+            android:layout_below="@+id/textViewNomeDoProfessor">
 
             <com.github.clans.fab.FloatingActionButton
                 android:text="Confirmar"
@@ -81,13 +82,16 @@
                 android:id="@+id/button4"
                 android:background="#7bc8f3"
                 android:textColor="@android:color/background_light"
-                android:layout_marginBottom="72dp"
                 android:onClick="confirmar"
                 android:src="@android:drawable/ic_menu_add"
                 fab:fab_colorNormal="@color/colorPrimary"
                 fab:fab_colorPressed="@color/colorPrimaryDark"
                 fab:fab_colorRipple="@color/colorAccent"
-                fab:fab_label="Confirmar horas"/>
+                fab:fab_label="Confirmar horas"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
 
             <com.github.clans.fab.FloatingActionButton
                 android:id="@+id/chat"
